[tool.black]
skip-string-normalization = true

[tool.poetry]
name = "yearn-exporter"
version = "1.0.0"
description = "yearn exporter"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
eth-brownie = ">=1.20.3,<1.21"
click = ">=7.1.2"
tabulate = ">=0.8.7"
joblib = ">=1.0.1"
fastapi = ">=0.63.0"
uvicorn = ">=0.13.4"
sqlmodel = ">=0.0.4"
psycopg2-binary = ">=2.8.5"
#tokenlists = ">=0.1.7,<0.2"
semantic-version = ">=2.8.5"
boto3 = ">=1.34,<1.35"
matplotlib = ">=3.6.1"
sqlalchemy = ">=1.4.41"
sentry-sdk = ">=2.1.1,<2.2"
pytest-bdd = ">=5.0.0"
dank_mids = "4.20.153"
eth_retry = ">=0.3.3"
eth-hash = { version = "*", extras = ["pysha3"] }
ez-a-sync = ">=0.32.19,<0.33"
python-telegram-bot = "13.15"
ypricemagic = ">=4.6.0,<4.7"
multicall = ">=0.11.0"

eth-portfolio-temp = ">=0.0.1,<0.1"
memray = "*"
numpy = "<2"

uvloop = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
